k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-k8s-demo
  labels:
    app.kubernetes.io/name: devops-k8s-demo
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: devops-k8s-demo
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
