k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-k8s-demo
  labels:
    app.kubernetes.io/name: devops-k8s-demo
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: devops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-k8s-demo
                port:
                  name: http
